refactoring merge conflict